[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexey Kim",email = "kim805316@gmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (==3.14.0)",
    "django-filter (==23.2)",
    "django-debug-toolbar (==4.0.0)",
    "pillow (==11.2.1)",
    "gunicorn (==20.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
